--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,4 +1,5 @@
-body {
+ /* ここにbody*/
+ body {
     font-family: "Arial", "Meiryo", sans-serif;
     .blue{
         color: skyblue;
@@ -8,9 +9,8 @@ body {
       }
       
       text-align: center;
-
-     
   }
+  /*ここにh1*/
   h1 {
     font-size: 2rem;
     line-height: 1;
@@ -19,22 +19,18 @@ body {
     font-weight: bold;
     border-bottom:solid 3px rgb(115, 115, 114);
     text-shadow: 1px 1px 2px rgb(115, 115, 114);
- .google-fonts {
-    /* ここにGoogle Fontsを指定します */
+   
+  }
+  .josefin-sans {
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: weight;
     font-style: normal;
   }
-
-
-  }
-
+ /*ここにid;basic*/
   #basic > p {
     font-weight: bold;
      
-
-
   }
   
  
