--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -17,11 +17,11 @@ main{
 #parent{
     display: flex;
     justify-content: space-around;
+    flex-direction: column;
 }
 .contents{
-    width: 25%;
     padding: 10px 15px 10px 15px;
-    margin: 20px 0px 20px 0px;
+    margin: 20px auto 20px auto;
     border: 3px solid rgb(238, 204, 204);
     justify-content: space-around;
    text-align: center;
@@ -70,7 +70,11 @@ a:hover{
     font-size: 25px;
   }
     #parent{
-        display: block;
+        display: flex;
+        flex-direction: row;
 
+    }
+    .contents{
+        width: 25%;
     }
 }
